fix: align profile block

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -12,9 +12,11 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: flex-end;
     .profile-content__info {
+      margin-right: 16px;
       .profile-content__info-title {
-        margin-bottom: 16px;
+        margin-bottom: 20px;
         font-weight: bold;
         font-size: 22px;
       }
@@ -303,6 +305,7 @@
         }
       }
       .table-games__data-item-cost {
+        height: 100%;
         display: flex;
         align-items: center;
         .table-games__data-item-cost-itog {
@@ -885,6 +888,7 @@
   0% {
     visibility: visible;
   }
+  50%,
   100% {
     visibility: hidden;
   }
@@ -908,17 +912,22 @@
 }
 
 @media (max-width: 1100px) {
-  .profile-content {
-    justify-content: center !important;
-    .profile-content__info-title {
-      text-align: center;
-    }
-  }
   .table-games__data-item-buttons-play-caption {
     display: none;
   }
   .cost-item {
     padding-left: 16px !important;
+  }
+}
+
+@media (max-width: 1078px) {
+  .profile-content {
+    justify-content: center !important;
+    .profile-content__info {
+      .profile-content__info-title {
+        text-align: center;
+      }
+    }
   }
 }
 
